force-app/main/default/objects/DNBoptimizer__DnBExternalRecord__x/fields/DNBoptimizer__PrimarySquareFootage__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__PrimarySquareFootage__c</fullName>
    <description>The building space this entity operates from within a building as measured in square feet.</description>
    <inlineHelpText>The building space this entity operates from within a building as measured in square feet.</inlineHelpText>
    <label>Primary Address Square Footage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>