force-app/main/default/objects/DNBoptimizer__DnBExternalRecord__x/fields/DNBoptimizer__PrimaryStateProvinceAbbreviation_ISO__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__PrimaryStateProvinceAbbreviation_ISO__c</fullName>
    <description>Primary Address State Province normalized by the Salesforce ISO Service</description>
    <label>Primary Address State Province ISO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>