force-app/main/default/objects/DNBoptimizer__DnBExternalRecord__x/fields/DNBoptimizer__PrimaryStateProvinceName__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__PrimaryStateProvinceName__c</fullName>
    <description>The name of the state or province where the business is physically located.</description>
    <inlineHelpText>The name of the state or province where the business is physically located.</inlineHelpText>
    <label>Primary Address State Province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>