force-app/main/default/objects/DNBoptimizer__DnBExternalRecord__x/fields/DNBoptimizer__PrimaryStreetAddress__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__PrimaryStreetAddress__c</fullName>
    <description>The address number, or post office box number, and street name where the business is located.</description>
    <inlineHelpText>The address number, or post office box number, and street name where the business is located.</inlineHelpText>
    <label>Primary Address Line 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>