force-app/main/default/objects/DNBoptimizer__DnBExternalRecord__x/fields/DNBoptimizer__SalesVolumeReliabilityCode__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__SalesVolumeReliabilityCode__c</fullName>
    <description>A code value which describes the reliability of the annual Sales Volume figure.</description>
    <inlineHelpText>A code value which describes the reliability of the annual Sales Volume figure.</inlineHelpText>
    <label>Sales Volume Reliability Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>