force-app/main/default/objects/DNBoptimizer__DnBExternalRecord__x/fields/DNBoptimizer__SalesVolumeReliabilityDescription__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__SalesVolumeReliabilityDescription__c</fullName>
    <description>A description of the reliability of the Sales Volume figure.</description>
    <inlineHelpText>A description of the reliability of the Sales Volume figure.</inlineHelpText>
    <label>Sales Volume Reliability Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>