force-app/main/default/objects/DNBoptimizer__DnBExternalRecord__x/fields/DNBoptimizer__SIC4Code1__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__SIC4Code1__c</fullName>
    <description>The primary Standard Industrial Classification (SIC) four digit code for the business.</description>
    <inlineHelpText>The primary Standard Industrial Classification (SIC) four digit code for the business.</inlineHelpText>
    <label>SIC4 Code 1</label>
    <length>4</length>
    <type>Text</type>
</CustomField>