force-app/main/default/objects/DNBoptimizer__DnBExternalRecord__x/fields/DNBoptimizer__SIC4Code2__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__SIC4Code2__c</fullName>
    <description>The secondary Standard Industrial Classification (SIC) four digit code for the business.</description>
    <inlineHelpText>The secondary Standard Industrial Classification (SIC) four digit code for the business.</inlineHelpText>
    <label>SIC4 Code 2</label>
    <length>4</length>
    <type>Text</type>
</CustomField>