force-app/main/default/objects/DNBoptimizer__DnBExternalRecord__x/fields/DNBoptimizer__SIC4Code2Description__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__SIC4Code2Description__c</fullName>
    <description>The secondary Standard Industrial Classification (SIC) description for the business.</description>
    <inlineHelpText>The secondary Standard Industrial Classification (SIC) description for the business.</inlineHelpText>
    <label>SIC4 Code 2 Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>