force-app/main/default/objects/DNBoptimizer__DnBExternalRecord__x/fields/DNBoptimizer__SIC4Code3__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__SIC4Code3__c</fullName>
    <description>The tertiary Standard Industrial Classification (SIC) four digit code for the business.</description>
    <inlineHelpText>The tertiary Standard Industrial Classification (SIC) four digit code for the business.</inlineHelpText>
    <label>SIC4 Code 3</label>
    <length>4</length>
    <type>Text</type>
</CustomField>