force-app/main/default/objects/DNBoptimizer__DnBExternalRecord__x/fields/DNBoptimizer__SmallBusinessIndicator__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__SmallBusinessIndicator__c</fullName>
    <description>Indicates whether the business is designated a small business as defined by the Small Business Administration of the US government.</description>
    <inlineHelpText>Indicates whether the business is designated a small business as defined by the Small Business Administration of the US government.</inlineHelpText>
    <label>Small Business Indicator</label>
    <length>50</length>
    <type>Text</type>
</CustomField>