force-app/main/default/objects/DNBoptimizer__DnBExternalRecord__x/fields/DNBoptimizer__SubsidiaryIndicator__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__SubsidiaryIndicator__c</fullName>
    <description>Indicates whether the subject record is a Subsidiary within their corporate family tree.</description>
    <inlineHelpText>Indicates whether the subject record is a Subsidiary within their corporate family tree.</inlineHelpText>
    <label>Subsidiary Indicator</label>
    <length>50</length>
    <type>Text</type>
</CustomField>