force-app/main/default/objects/DNBoptimizer__DnBExternalRecord__x/fields/DNBoptimizer__TradestyleName2__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__TradestyleName2__c</fullName>
    <description>The name that the entity trades under for commercial purposes although the registered legal name used for contracts and other formal situations may be another name.</description>
    <inlineHelpText>The name that the entity trades under for commercial purposes although the registered legal name used for contracts and other formal situations may be another name.</inlineHelpText>
    <label>Tradestyle Name 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>