force-app/main/default/objects/DNBoptimizer__DnBExternalRecord__x/fields/DNBoptimizer__USTaxID__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__USTaxID__c</fullName>
    <description>The business identification number used in the United State for business registration and tax collection, also known as Federal Employer Identification Number (FEIN).</description>
    <inlineHelpText>The business identification number used in the United State for business registration and tax collection, also known as Federal Employer Identification Number (FEIN).</inlineHelpText>
    <label>US Tax ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>