force-app/main/default/objects/DNBoptimizer__DnBExternalRecord__x/fields/DNBoptimizer__WebAddress__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__WebAddress__c</fullName>
    <description>The Internet URL (Uniform Resource Locator) which uniquely identifies the proprietary website of the subject or the website preferred by the subject which gives more information on the subject.</description>
    <inlineHelpText>The Internet URL (Uniform Resource Locator) which uniquely identifies the proprietary website of the subject or the website preferred by the subject which gives more information on the subject.</inlineHelpText>
    <label>Web Address</label>
    <type>Url</type>
</CustomField>