force-app/main/default/objects/DNBoptimizer__DnBExternalRecord__x/fields/DNBoptimizer__YearStarted__c.field-meta.xml
<CustomField>
    <fullName>DNBoptimizer__YearStarted__c</fullName>
    <description>The year in which the entity was established as a business.</description>
    <inlineHelpText>The year in which the entity was established as a business.</inlineHelpText>
    <label>Year Started</label>
    <length>4</length>
    <type>Text</type>
</CustomField>